config-root/namespaces/jx-production/demo-python-jx-demo-python/jx-demo-python-demo-python-deploy.yaml
# Source: demo-python/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jx-demo-python-demo-python
  labels:
    draft: draft-app
    chart: "demo-python-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'jx-demo-python'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-production
spec:
  selector:
    matchLabels:
      app: jx-demo-python-demo-python
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: jx-demo-python-demo-python
    spec:
      serviceAccountName: jx-demo-python-demo-python
      containers:
        - name: demo-python
          image: "890324431850.dkr.ecr.ap-south-1.amazonaws.com/data-platform-skn/demo-python:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
